recyvleview data bind finished. Also ui updated.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MvvvmDesignPatternDemo</string>
+    <string name="app_name">Note App</string>
     <string name="title">title</string>
     <string name="description">description</string>
     <string name="save_note">Save Note</string>
